--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,27 +1,32 @@
-name: Trading Bot
+name: TradingBot
 
 on:
   schedule:
-    - cron: "*/15 * * * *"   # corre cada 15 minutos
-  workflow_dispatch:        # permite lanzarlo manualmente
+    - cron: "*/5 * * * *"   # ⏰ Ejecuta cada 5 minutos
+  workflow_dispatch:        # Permite correrlo manualmente desde GitHub
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: 📥 Checkout repo
         uses: actions/checkout@v3
 
-      - name: Setup Python
+      - name: 🐍 Configurar Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+      - name: 📦 Instalar dependencias
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Run bot
+      - name: 🚀 Ejecutar bot
         env:
+          GMAIL_USER: ${{ secrets.GMAIL_USER }}
+          GMAIL_PASS: ${{ secrets.GMAIL_PASS }}
+          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
           GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
-          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
         run: python app.py
