--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,31 +2,31 @@ name: TradingBot
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # ⏰ Ejecuta cada 5 minutos
-  workflow_dispatch:        # Permite correrlo manualmente desde GitHub
+    - cron: "*/5 * * * *"   # ejecuta cada 5 minutos
+  workflow_dispatch:        # permite ejecutarlo manualmente desde GitHub
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-
     steps:
-      - name: 📥 Checkout repo
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: 🐍 Configurar Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
-      - name: 📦 Instalar dependencias
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: 🚀 Ejecutar bot
+      - name: Run bot
         env:
-          GMAIL_USER: ${{ secrets.GMAIL_USER }}
-          GMAIL_PASS: ${{ secrets.GMAIL_PASS }}
-          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
           GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
-        run: python app.py
+          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
+          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
+        run: |
+          python app.py
