--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,31 +2,149 @@ name: TradingBot
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # ejecuta cada 5 minutos
-  workflow_dispatch:        # permite ejecutarlo manualmente desde GitHub
+    # Corre cada hora al minuto 0
+    - cron: "0 * * * *"
+  workflow_dispatch: {}  # Para correr manualmente
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install gspread oauth2client pytz pandas
 
       - name: Run bot
         env:
           GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
-          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-          GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
-          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
+          SPREADSHEET_ID:     ${{ secrets.SPREADSHEET_ID }}
+          GMAIL_USER:         ${{ secrets.GMAIL_USER }}
+          GMAIL_APP_PASS:     ${{ secrets.GMAIL_APP_PASS }}
         run: |
-          python app.py
+          python bot.py
+          import os, ssl, smtplib, json
+from email.mime.text import MIMEText
+from email.mime.multipart import MIMEMultipart
+from datetime import datetime, timedelta
+import pytz
+import gspread
+from oauth2client.service_account import ServiceAccountCredentials
+import pandas as pd
+
+# =========================
+#   FUNCIONES HORARIO
+# =========================
+TZ_NY = pytz.timezone("America/New_York")
+
+def now_et():
+    return datetime.now(TZ_NY)
+
+def fmt_dt(dt):
+    return dt.strftime("%m/%d/%Y %I:%M:%S %p")
+
+def market_status(dt):
+    open_t  = dt.replace(hour=9, minute=30, second=0, microsecond=0)
+    close_t = dt.replace(hour=16, minute=0,  second=0, microsecond=0)
+    nyse_open = (dt.weekday() < 5) and (dt >= open_t and dt <= close_t)
+
+    london = dt.astimezone(pytz.timezone("Europe/London"))
+    ld_open_t  = london.replace(hour=8, minute=0, second=0, microsecond=0)
+    ld_close_t = london.replace(hour=16, minute=30, second=0, microsecond=0)
+    london_open = (london.weekday() < 5) and (london >= ld_open_t and london <= ld_close_t)
+
+    return nyse_open, True, london_open  # NYSE, MES (24h), Londres
+
+# =========================
+#   EMAIL
+# =========================
+def send_email(subject, html, to_addrs):
+    user = os.environ["GMAIL_USER"]
+    app_pass = os.environ["GMAIL_APP_PASS"]
+
+    msg = MIMEMultipart("alternative")
+    msg["From"] = user
+    msg["To"] = ", ".join(to_addrs)
+    msg["Subject"] = subject
+    msg.attach(MIMEText(html, "html"))
+
+    ctx = ssl.create_default_context()
+    with smtplib.SMTP_SSL("smtp.gmail.com", 465, context=ctx) as server:
+        server.login(user, app_pass)
+        server.sendmail(user, to_addrs, msg.as_string())
+
+# =========================
+#   GOOGLE SHEETS
+# =========================
+def get_sheet_client():
+    sa_json = os.environ["GCP_SERVICE_ACCOUNT"]
+    info = json.loads(sa_json)
+    scope = ["https://spreadsheets.google.com/feeds", "https://www.googleapis.com/auth/drive"]
+    creds = ServiceAccountCredentials.from_json_keyfile_dict(info, scope)
+    return gspread.authorize(creds)
+
+def load_signals():
+    client = get_sheet_client()
+    ss_id = os.environ["SPREADSHEET_ID"]
+    sh = client.open_by_key(ss_id)
+    ws = sh.sheet1
+    rows = ws.get_all_records()
+    df = pd.DataFrame(rows)
+    if "score" in df.columns:
+        df["score"] = pd.to_numeric(df["score"], errors="coerce")
+    return df
+
+# =========================
+#   REPORTE HORARIO
+# =========================
+def build_hourly_report(df):
+    now = now_et()
+    one_hour_ago = now - timedelta(hours=1)
+
+    if "time" in df.columns:
+        try:
+            df["time"] = pd.to_datetime(df["time"], errors="coerce")
+        except:
+            pass
+
+    recent = df.tail(20)
+    low_conf = recent[recent["score"] < 80] if "score" in df.columns else pd.DataFrame()
+
+    nyse_open, mes_open, london_open = market_status(now)
+
+    def table_html(df_small, title):
+        if df_small.empty:
+            return f"<h4>{title}</h4><p>Sin datos.</p>"
+        cols = [c for c in ["time","symbol","alias","tf","direction","score"] if c in df_small.columns]
+        return f"<h4>{title}</h4>" + df_small[cols].to_html(index=False, border=1)
+
+    html = f"""
+    <h3>📈 Reporte horario del bot</h3>
+    <p><b>Hora ET:</b> {fmt_dt(now)}</p>
+    <ul>
+      <li>NYSE: {'ABIERTO' if nyse_open else 'CERRADO'}</li>
+      <li>MES (futuros): {'ABIERTO' if mes_open else 'CERRADO'}</li>
+      <li>Londres: {'ABIERTO' if london_open else 'CERRADO'}</li>
+    </ul>
+    {table_html(recent, "Últimas señales")}
+    {table_html(low_conf, "⚠️ Señales con score < 80")}
+    """
+    return html
+
+def main():
+    df = load_signals()
+    body = build_hourly_report(df)
+    send_email("⏰ Reporte horario – Trading Bot", body, [os.environ["GMAIL_USER"]])
+
+if __name__ == "__main__":
+    main()
