--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,8 +2,8 @@ name: TradingBot
 
 on:
   schedule:
-    - cron: "0 * * * *"   # corre cada hora
-  workflow_dispatch: {}   # lo puedes lanzar manualmente
+    - cron: "0 * * * *"   # cada hora (cambia a "*/5 * * * *" si quieres cada 5 minutos)
+  workflow_dispatch:
 
 jobs:
   run-bot:
@@ -26,15 +26,15 @@ jobs:
       - name: Run bot
         env:
           GCP_SERVICE_ACCOUNT: ${{ secrets.GCP_SERVICE_ACCOUNT }}
-          SPREADSHEET_ID:     ${{ secrets.SPREADSHEET_ID }}
-          GMAIL_USER:         ${{ secrets.GMAIL_USER }}
-          GMAIL_APP_PASS:     ${{ secrets.GMAIL_APP_PASS }}
+          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          GMAIL_USER: ${{ secrets.GMAIL_USER }}
+          GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
         run: |
           cat > bot.py <<'EOF'
 import os, ssl, smtplib, json
 from email.mime.text import MIMEText
 from email.mime.multipart import MIMEMultipart
-from datetime import datetime, timedelta
+from datetime import datetime
 import pytz, gspread, pandas as pd
 from oauth2client.service_account import ServiceAccountCredentials
 
@@ -50,13 +50,7 @@ def market_status(dt):
     open_t  = dt.replace(hour=9, minute=30, second=0, microsecond=0)
     close_t = dt.replace(hour=16, minute=0,  second=0, microsecond=0)
     nyse_open = (dt.weekday() < 5) and (dt >= open_t and dt <= close_t)
-
-    london = dt.astimezone(pytz.timezone("Europe/London"))
-    ld_open_t  = london.replace(hour=8, minute=0, second=0, microsecond=0)
-    ld_close_t = london.replace(hour=16, minute=30, second=0, microsecond=0)
-    london_open = (london.weekday() < 5) and (london >= ld_open_t and london <= ld_close_t)
-
-    return nyse_open, True, london_open
+    return nyse_open
 
 def send_email(subject, html, to_addrs):
     user = os.environ["GMAIL_USER"]
@@ -86,44 +80,23 @@ def load_signals():
     sh = client.open_by_key(ss_id)
     ws = sh.sheet1
     rows = ws.get_all_records()
-    df = pd.DataFrame(rows)
-    if "score" in df.columns:
-        df["score"] = pd.to_numeric(df["score"], errors="coerce")
-    return df
+    return pd.DataFrame(rows)
 
-def build_hourly_report(df):
+def build_report(df):
     now = now_et()
-    if "time" in df.columns:
-        try:
-            df["time"] = pd.to_datetime(df["time"], errors="coerce")
-        except:
-            pass
-    recent = df.tail(20)
-    low_conf = recent[recent["score"] < 80] if "score" in df.columns else pd.DataFrame()
-    nyse_open, mes_open, london_open = market_status(now)
-
-    def table_html(df_small, title):
-        if df_small.empty:
-            return f"<h4>{title}</h4><p>Sin datos.</p>"
-        cols = [c for c in ["time","symbol","alias","tf","direction","score"] if c in df_small.columns]
-        return f"<h4>{title}</h4>" + df_small[cols].to_html(index=False, border=1)
-
+    nyse_open = market_status(now)
+    last = df.tail(10)
     return f"""
-    <h3>📈 Reporte horario del bot</h3>
-    <p><b>Hora ET:</b> {fmt_dt(now)}</p>
-    <ul>
-      <li>NYSE: {'ABIERTO' if nyse_open else 'CERRADO'}</li>
-      <li>MES (futuros): {'ABIERTO' if mes_open else 'CERRADO'}</li>
-      <li>Londres: {'ABIERTO' if london_open else 'CERRADO'}</li>
-    </ul>
-    {table_html(recent, "Últimas señales")}
-    {table_html(low_conf, "⚠️ Señales con score < 80")}
+    <h3>Reporte TradingBot</h3>
+    <p><b>Hora:</b> {fmt_dt(now)}</p>
+    <p>NYSE: {'ABIERTO' if nyse_open else 'CERRADO'}</p>
+    {last.to_html(index=False) if not last.empty else 'Sin datos'}
     """
 
 def main():
     df = load_signals()
-    body = build_hourly_report(df)
-    send_email("⏰ Reporte horario – Trading Bot", body, [os.environ["GMAIL_USER"]])
+    body = build_report(df)
+    send_email("Reporte TradingBot", body, [os.environ["GMAIL_USER"]])
 
 if __name__ == "__main__":
     main()
