--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,8 @@
-pandas
-numpy
-pytz
 streamlit
-xlsxwriter
-openpyxl
-scikit-learn
-statsmodels
-matplotlib
 gspread
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
-pyyaml
-schedule
-gspread
-oauth2client
-yfinance
+imaplib2
+pandas
+matplotlib
