--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,26 +1,25 @@
-# .github/workflows/bot.yml
-name: Ejecutar Bot
+name: trading-bot
 
 on:
-  workflow_dispatch:   # Permite lanzarlo manualmente desde GitHub
   schedule:
-    - cron: "0 * * * *"   # Cada hora (UTC). Ajusta según necesites.
+    - cron: "0 * * * *"   # cada hora en punto
+  workflow_dispatch: {}    # para lanzarlo manualmente
 
 jobs:
-  run-bot:
+  run:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Configurar Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
-
-      - name: Instalar dependencias
+          python-version: "3.11"
+      - run: |
+          python -m pip install --upgrade pip
+          pip install gspread google-auth yfinance pandas numpy pytz
+      - env:
+          GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
+          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          GMAIL_USER: ${{ secrets.GMAIL_USER }}
+          GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
         run: |
-          pip install -r requirements.txt
-
-      - name: Ejecutar bot.py
-        run: python bot.py
+          python bot.py
