--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,24 +2,32 @@ name: trading-bot
 
 on:
   schedule:
-    - cron: "0 * * * *"   # cada hora en punto
-  workflow_dispatch: {}    # para lanzarlo manualmente
+    - cron: "0 * * * *"   # cada hora en punto (UTC)
+  workflow_dispatch: {}    # permite lanzarlo manualmente
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - run: |
+
+      - name: Install dependencies
+        run: |
           python -m pip install --upgrade pip
           pip install gspread google-auth yfinance pandas numpy pytz
-      - env:
+
+      - name: Run bot
+        env:
           GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
+          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
         run: |
           python bot.py
