--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -3,24 +3,22 @@ name: trading-bot
 on:
   schedule:
     - cron: "0 * * * *"   # cada hora en punto (UTC)
-  workflow_dispatch: {}    # permite lanzarlo manualmente
+  workflow_dispatch: {}    # ejecución manual desde Actions
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install gspread google-auth yfinance pandas numpy pytz
+          pip install -r requirements.txt
 
       - name: Run bot
         env:
@@ -28,6 +26,5 @@ jobs:
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
-          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
         run: |
           python bot.py
