--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,30 +1,35 @@
-name: trading-bot
+# .github/workflows/bot.yml
+name: Ejecutar Bot
 
 on:
+  workflow_dispatch:   # 👉 Permite lanzarlo manualmente desde GitHub
   schedule:
-    - cron: "0 * * * *"   # cada hora en punto (UTC)
-  workflow_dispatch: {}    # ejecución manual desde Actions
+    - cron: "0 * * * *"   # 👉 Corre automáticamente cada hora en punto (UTC)
 
 jobs:
-  run:
+  run-bot:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: 📥 Checkout repo
+        uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v5
+      - name: 🐍 Configurar Python
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.10"
 
-      - name: Install dependencies
+      - name: 📦 Instalar dependencias
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run bot
+      - name: 🚀 Ejecutar bot.py
         env:
           GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
+          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
         run: |
           python bot.py
