--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,34 +2,32 @@
 name: Ejecutar Bot
 
 on:
-  workflow_dispatch:   # 👉 Permite lanzarlo manualmente desde GitHub
+  workflow_dispatch:   # Permite lanzarlo manualmente desde GitHub
   schedule:
-    - cron: "0 * * * *"   # 👉 Corre automáticamente cada hora en punto (UTC)
+    - cron: "0 * * * *"   # Cada hora (UTC). Ajusta según necesites.
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: 🐍 Configurar Python
+      - name: Configurar Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: 📦 Instalar dependencias
+      - name: Instalar dependencias
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: 🚀 Ejecutar bot.py
+      - name: Ejecutar Bot
         env:
           GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
-          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
         run: |
-          python bot.py
+          python Trading-Bot2025.py
