--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,32 +2,34 @@
 name: Ejecutar Bot
 
 on:
-  workflow_dispatch:   # Permite lanzarlo manualmente desde GitHub
+  workflow_dispatch:   # Puedes lanzarlo manualmente desde GitHub
   schedule:
-    - cron: "0 * * * *"   # Cada hora (UTC). Ajusta según necesites.
+    - cron: "0 * * * *"   # Corre cada hora en punto (UTC)
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: 📥 Checkout del repo
+        uses: actions/checkout@v3
 
-      - name: Configurar Python
+      - name: 🐍 Configurar Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: Instalar dependencias
+      - name: 📦 Instalar dependencias
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Ejecutar Bot
+      - name: 🚀 Ejecutar bot
         env:
           GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
+          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}   # opcional, si lo usas
         run: |
           python Trading-Bot2025.py
