--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -32,4 +32,4 @@ jobs:
           GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
           NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}   # opcional, si lo usas
         run: |
-          python Trading-Bot2025.py
+          python bot.py
