--- a/.github/workflows/recalibrate.yml
+++ b/.github/workflows/recalibrate.yml
@@ -2,32 +2,31 @@ name: Recalibrate Bot
 
 on:
   schedule:
-    - cron: "0 3 * * *"   # todos los días a las 3 AM UTC (ajusta si quieres otra hora)
-  workflow_dispatch:       # permite lanzarlo manualmente desde GitHub
+    - cron: "5 1 * * *"   # 01:05 UTC todos los días (ajústalo si quieres)
+  workflow_dispatch:      # correr manual
 
 jobs:
   recalibrate:
     runs-on: ubuntu-latest
-
     steps:
-      - name: 📥 Checkout del repo
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: 🐍 Configurar Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: 📦 Instalar dependencias
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: 🤖 Ejecutar recalibración
+      - name: Recalibrate
         env:
-          GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
-          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-          GMAIL_USER: ${{ secrets.GMAIL_USER }}
-          GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
+          GMAIL_USER:        ${{ secrets.GMAIL_USER }}
+          GMAIL_APP_PASS:    ${{ secrets.GMAIL_APP_PASS }}
+          GOOGLE_SHEETS_JSON:${{ secrets.GOOGLE_SHEETS_JSON }}
+          SPREADSHEET_ID:    ${{ secrets.SPREADSHEET_ID }}
         run: |
-          python recalibrate.py
+          python bot.py --recalibrate
