--- a/.github/workflows/bot-runner.yml
+++ b/.github/workflows/bot-runner.yml
@@ -3,11 +3,12 @@ name: Run Trading Bot
 on:
   schedule:
     - cron: "*/5 * * * *"   # cada 5 minutos
-  workflow_dispatch:
+  workflow_dispatch:        # permite correrlo manualmente
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -26,7 +27,6 @@ jobs:
         env:
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
-          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
           GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
           ALERT_DKNG: ${{ secrets.ALERT_DKNG }}
