--- a/.github/workflows/recalibrate.yml
+++ b/.github/workflows/recalibrate.yml
@@ -1,28 +1,30 @@
-name: Recalibrate Bot
+# .github/workflows/recalibrate.yml
+name: ♻️ Recalibrate Bot
 
 on:
   schedule:
-    - cron: "0 */6 * * *"   # cada 6 horas
-  workflow_dispatch:
+    - cron: "0 */6 * * *"   # cada 6 horas (UTC)
+  workflow_dispatch:        # ejecución manual desde Actions
 
 jobs:
   recalibrate:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: 📥 Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: 🐍 Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run recalibration
+      - name: 🔄 Run recalibration
         env:
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
           GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
@@ -32,5 +34,8 @@ jobs:
           python - <<'EOF'
           from bot import recalibrate_weights_from_sheet
           result = recalibrate_weights_from_sheet()
-          print("Recalibration result:", result)
+          if result:
+              print("✅ Recalibration completed:", result)
+          else:
+              print("⚠️ Recalibration skipped (no data or error)")
           EOF
