--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -1,27 +1,26 @@
 name: Debug Bot
 
 on:
-  workflow_dispatch:   # Solo manual para no spamear
+  workflow_dispatch:   # Se ejecuta manualmente desde Actions
 
 jobs:
   debug:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
+      - name: 📥 Checkout repo
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: 🐍 Configurar Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: 📦 Instalar dependencias
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run bot in debug mode
+      - name: 🚀 Ejecutar bot en modo debug
         env:
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
           GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
@@ -31,5 +30,6 @@ jobs:
           ALERT_MICROS: ${{ secrets.ALERT_MICROS }}
           ALERT_DEFAULT: ${{ secrets.ALERT_DEFAULT }}
         run: |
-          echo "🚀 Running bot in DEBUG mode..."
-          python bot.py
+          echo "===== INICIO DEBUG ====="
+          python bot.py --debug
+          echo "===== FIN DEBUG ====="
