--- a/.github/workflows/bot-runner.yml
+++ b/.github/workflows/bot-runner.yml
@@ -1,32 +1,32 @@
 name: Run Trading Bot
 
 on:
-  workflow_dispatch:   # manual
   schedule:
-    - cron: "0 * * * *"   # cada hora en punto (UTC)
+    - cron: "0 * * * *"   # cada hora
+  workflow_dispatch:
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout repo
+      - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: 🐍 Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: 📦 Install dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: 🚀 Run bot
+      - name: Run bot
         env:
-          GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
           GMAIL_USER: ${{ secrets.GMAIL_USER }}
           GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
           ALERT_DKNG: ${{ secrets.ALERT_DKNG }}
