--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -16,21 +16,16 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install dependencies (debug)
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Debug Script
+      - name: Run bot with debug
         env:
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
           GOOGLE_SHEETS_JSON: ${{ secrets.GOOGLE_SHEETS_JSON }}
+          GMAIL_USER: ${{ secrets.GMAIL_USER }}
+          GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
         run: |
-          python - <<'EOF'
-          import sys
-          import pandas, numpy, yfinance, gspread
-          print("✅ Debug: librerías importadas correctamente")
-          from bot import process_signal
-          row = process_signal("DKNG","Buy",45.3)
-          print("✅ Señal de prueba guardada:", row)
-          EOF
+          python bot.py || true
