--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
 # Core
-pandas
-numpy
-yfinance
-python-dateutil
-pytz
-matplotlib
+streamlit==1.37.0
+streamlit-autorefresh==1.0.1
 
-# HTTP / utilitarios
-requests
+# Data & Finance
+pandas==2.2.2
+numpy==1.26.4
+yfinance==0.2.38
+mplfinance==0.12.10b0
 
-# Google Sheets + auth
-gspread
-google-auth
+# Google Sheets
+gspread==6.1.2
+google-auth==2.29.0
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
 
-# Streamlit (panel) + autorefresh
-streamlit
-streamlit-autorefresh
+# Plotting
+matplotlib==3.8.4
 
-# Opcionales útiles para análisis y gráficos
-mplfinance
-ipython
-tqdm
+# Para evitar el ArrowTypeError (pyarrow>=14 da problemas con streamlit)
+pyarrow==13.0.0
+
+# Otros
+pytz==2024.1
