--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,23 @@
-# Core
-streamlit==1.37.0
-streamlit-autorefresh==1.0.1
+# Core  
+pandas  
+numpy  
+yfinance  
+python-dateutil  
+pytz  
+matplotlib  
 
-# Data & Finance
-pandas==2.2.2
-numpy==1.26.4
-yfinance==0.2.38
-mplfinance==0.12.10b0
+# HTTP / utilitarios  
+requests  
 
-# Google Sheets
-gspread==6.1.2
-google-auth==2.29.0
-google-auth-oauthlib==1.2.0
-google-auth-httplib2==0.2.0
+# Google Sheets + auth  
+gspread  
+google-auth  
 
-# Plotting
-matplotlib==3.8.4
+# Streamlit (panel) + util y refresco automático  
+streamlit  
+streamlit-autorefresh  
 
-# PyArrow – versión estable que no requiere cmake
-pyarrow==13.0.0
-
-# Otros
-pytz==2024.1
+# Opcionales útiles para análisis / debugging (recomendados)  
+ipython  
+tqdm  
+mplfinance
