--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # Core
 streamlit==1.37.0
-streamlit-autorefresh==1.0.1
 
 # Data & Finance
 pandas==2.2.2
@@ -17,9 +16,8 @@ google-auth-httplib2==0.2.0
 # Plotting
 matplotlib==3.8.4
 
-# Para evitar ArrowTypeError en Streamlit (¡muy importante!)
+# Para evitar ArrowTypeError en Streamlit (usar versión estable)
 pyarrow==13.0.0
 
 # Otros
 pytz==2024.1
-requests==2.32.3
