--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -23,6 +23,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # 🔔 Paso para probar envío de correo
+      - name: Test Gmail
+        env:
+          GMAIL_USER: ${{ secrets.GMAIL_USER }}
+          GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
+          ALERT_DEFAULT: ${{ secrets.ALERT_DEFAULT }}
+        run: |
+          python test_mail.py
+
       - name: Run bot
         env:
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
@@ -32,6 +41,5 @@ jobs:
           ALERT_DKNG: ${{ secrets.ALERT_DKNG }}
           ALERT_MICROS: ${{ secrets.ALERT_MICROS }}
           ALERT_DEFAULT: ${{ secrets.ALERT_DEFAULT }}
-          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
         run: |
           python bot.py
