--- a/.github/workflows/run-bot.yml
+++ b/.github/workflows/run-bot.yml
@@ -2,8 +2,17 @@ name: Run Trading Bot
 
 on:
   schedule:
-    - cron: "0 * * * *"   # cada hora
-  workflow_dispatch:
+    # 📈 Regular Market Hours (09:30–16:00 ET = 13:30–20:00 UTC, lun-vie)
+    - cron: "*/15 13-20 * * 1-5"
+
+    # 🌙 Globex Session (18:00–21:00 ET = 22:00–01:00 UTC, lun-vie)
+    - cron: "*/15 22-23 * * 0-4"  # Domingo–Jueves 22:00–23:59 UTC
+    - cron: "*/15 0-1 * * 1-5"    # Lunes–Viernes 00:00–01:59 UTC
+
+    # 🌙 Globex Continuación (01:00–17:00 ET = 05:00–21:00 UTC, lun-vie)
+    - cron: "*/15 5-20 * * 1-5"
+
+  workflow_dispatch:   # ▶️ Permite ejecutarlo manualmente
 
 jobs:
   run-bot:
@@ -22,15 +31,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      # 🔔 Paso para probar envío de correo
-      - name: Test Gmail
-        env:
-          GMAIL_USER: ${{ secrets.GMAIL_USER }}
-          GMAIL_APP_PASS: ${{ secrets.GMAIL_APP_PASS }}
-          ALERT_DEFAULT: ${{ secrets.ALERT_DEFAULT }}
-        run: |
-          python test_mail.py
 
       - name: Run bot
         env:
